--- a/index.html
+++ b/index.html
@@ -24,11 +24,26 @@
         }
 
         .clock {
-            width: 200px;
-            height: 200px;
-            border: 2px solid white;
+            width: 300px;
+            height: 300px;
+            border: 4px solid white;
             border-radius: 50%;
             position: relative;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+            background: linear-gradient(45deg, #000000, #1a1a1a);
+        }
+
+        .clock::after {
+            content: '';
+            position: absolute;
+            width: 15px;
+            height: 15px;
+            background: white;
+            border-radius: 50%;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 2;
         }
 
         .hand {
@@ -37,25 +52,27 @@
             left: 50%;
             transform-origin: bottom;
             background-color: white;
+            border-radius: 4px;
+            box-shadow: 0 0 5px rgba(255, 255, 255, 0.3);
         }
 
         .hour {
-            width: 4px;
-            height: 60px;
-            margin-left: -2px;
+            width: 6px;
+            height: 80px;
+            margin-left: -3px;
         }
 
         .minute {
-            width: 3px;
-            height: 80px;
-            margin-left: -1.5px;
+            width: 4px;
+            height: 110px;
+            margin-left: -2px;
         }
 
         .second {
             width: 2px;
-            height: 90px;
+            height: 130px;
             margin-left: -1px;
-            background-color: red;
+            background-color: #ff0000;
         }
 
         .timer {
@@ -81,20 +98,66 @@
         button:hover {
             background-color: #444;
         }
+
+        .reset-corner {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+        }
+
+        .controls-corner {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            display: flex;
+            gap: 1rem;
+        }
+
+        /* Add hour markers */
+        .clock .marker {
+            position: absolute;
+            width: 2px;
+            height: 15px;
+            background: white;
+            left: 50%;
+            transform-origin: 50% 150px;  /* Half of clock height */
+        }
     </style>
 </head>
 <body>
+    <div class="controls-corner">
+        <button onclick="startTimer()">Start</button>
+        <button onclick="resetTimer()">Reset</button>
+    </div>
     <div class="container">
         <div class="clock">
+            <!-- Add hour markers -->
+            <div class="marker" style="transform: rotate(0deg)"></div>
+            <div class="marker" style="transform: rotate(30deg)"></div>
+            <div class="marker" style="transform: rotate(60deg)"></div>
+            <div class="marker" style="transform: rotate(90deg)"></div>
+            <div class="marker" style="transform: rotate(120deg)"></div>
+            <div class="marker" style="transform: rotate(150deg)"></div>
+            <div class="marker" style="transform: rotate(180deg)"></div>
+            <div class="marker" style="transform: rotate(210deg)"></div>
+            <div class="marker" style="transform: rotate(240deg)"></div>
+            <div class="marker" style="transform: rotate(270deg)"></div>
+            <div class="marker" style="transform: rotate(300deg)"></div>
+            <div class="marker" style="transform: rotate(330deg)"></div>
             <div class="hand hour"></div>
             <div class="hand minute"></div>
             <div class="hand second"></div>
         </div>
-        <div class="timer">05:00</div>
-        <div class="controls">
-            <button onclick="startTimer()">Start</button>
-            <button onclick="resetTimer()">Reset</button>
-        </div>
+        <div class="timer">15:00</div>
+        <a href="enjoy-your-day.html" style="
+            color: white;
+            text-decoration: none;
+            margin-top: 1rem;
+            padding: 10px 20px;
+            border: 1px solid white;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        ">End Session</a>
     </div>
 
     <script>
@@ -118,7 +181,7 @@
         updateClock();
 
         // Timer
-        let timeLeft = 300; // 5 minutes in seconds
+        let timeLeft = 900; // 15 minutes in seconds (15 * 60 = 900)
         let timerId = null;
 
         function updateTimerDisplay() {
@@ -146,7 +209,7 @@
         function resetTimer() {
             clearInterval(timerId);
             timerId = null;
-            timeLeft = 300;
+            timeLeft = 900;
             updateTimerDisplay();
         }
     </script>
