--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <div class="marker" style="transform: rotate(330deg)"></div>
             </div>
             <div class="exercise-icon">
-                <img src="Alexis.png" alt="Character with thumbs up" class="pixel-character">
+                <img src="Alexis-coffee.png" alt="Character with thumbs up" class="pixel-character">
             </div>
         </div>
         <div class="timer">15:00</div>
